--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,14 @@
     <main>
         <div class="calculator">
             <section class="displayContainer">
-                <input type="text" class="display">
+                <div class="lastResult">Last Result</div>
+                <input type="text" class="display" maxlength="16">
             </section>
             <section class="buttons">
                 <div>
                     <button class="btn btn-clear">C</button>
-                    <button class="btn btn-num">(</button>
-                    <button class="btn btn-num">)</button>
+                    <button class="btn btn-changeSignal">+/-</button>
+                    <button class="btn btn-percent">%</button>
                     <button class="btn btn-num">/</button>
                 </div>
                 <div>
