--- a/src/index.html
+++ b/src/index.html
@@ -6,48 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="./assets/SCSS/mainUseful.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
     <main>
-        <div class="calculator">
+        <section class="calculator">
             <section class="displayContainer">
-                <div class="lastResult">Last Result</div>
-                <input type="text" class="display" maxlength="16">
+                <div class="group">
+                    <input type="text" class="display" maxlength="16">
+                    <hr>
+                    <div class="lastResult"></div>
+                </div>
             </section>
-            <section class="buttons">
-                <div>
-                    <button class="btn btn-clear">C</button>
-                    <button class="btn btn-changeSignal">+/-</button>
-                    <button class="btn btn-percent">%</button>
-                    <button class="btn btn-num">/</button>
-                </div>
-                <div>
-                    <button class="btn btn-num">7</button>
-                    <button class="btn btn-num">8</button>
-                    <button class="btn btn-num">9</button>
-                    <button class="btn btn-num">*</button>
-                </div>
-                <div>
-                    <button class="btn btn-num">4</button>
-                    <button class="btn btn-num">5</button>
-                    <button class="btn btn-num">6</button>
-                    <button class="btn btn-num">+</button>
-                </div>
-                <div>
-                    <button class="btn btn-num">1</button>
-                    <button class="btn btn-num">2</button>
-                    <button class="btn btn-num">3</button>
-                    <button class="btn btn-num">-</button>
-                </div>
-                <div>
+            <section class="buttonsContainer">
+                <section class="numbersContainer">
+                    <button class="btn btn-num num">7</button>
+                    <button class="btn btn-num num">8</button>
+                    <button class="btn btn-num num">9</button>
+                    <button class="btn btn-num num">4</button>
+                    <button class="btn btn-num num">5</button>
+                    <button class="btn btn-num num">6</button>
+                    <button class="btn btn-num num">1</button>
+                    <button class="btn btn-num num">2</button>
+                    <button class="btn btn-num num">3</button>
+                    <button class="btn btn-num zero">0</button>
                     <button class="btn btn-num">.</button>
-                    <button class="btn btn-num">0</button>
-                    <button class="btn btn-del">&laquo;</button>
-                    <button class="btn btn-calculate">=</button>
-                </div>
+                </section>
+                <section class="operationsContainer">
+                    <button class="btn btn-del option"><i class="fas fa-backspace"></i></button>
+                    <button class="btn btn-clear option"><i class="fas fa-eraser"></i></button>
+                    <button class="btn btn-copy option"><i class="fas fa-copy"></i></button>
+                    <button class="btn btn-num">+</button>
+                    <button class="btn btn-num">-</button>
+                    <button class="btn btn-num">*</button>
+                    <button class="btn btn-num">/</button>
+                    <button class="btn btn-percent">%</button>
+                    <button class="btn btn-squareRoot">&radic;</button>
+                    <button class="btn btn-potentiation">x^y</button>
+                    <button class="btn btn-changeSignal">+/-</button>
+                    <button class="btn btn-num">(</button>
+                    <button class="btn btn-num">)</button>
+                    <button class="btn btn-calculate"><i class="fas fa-equals"></i></button>
+                </section>
             </section>
-        </div>
+        </section>
+        <!-- <section class="history">
+            <h2>History</h2>
+            <hr>
+            <div class="historyContainer">
+            </div>
+        </section> -->
     </main>
     <script src="assets/main.js"></script>
 </body>
