--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,27 @@
             </div>
         </section> -->
     </main>
+
+    <footer>
+        <p>
+            <strong>Developed</strong> by <a href="https://github.com/AleNoia" target="_blank">Igor Noia
+                Silva</a>
+        </p>
+        <div class="is-flex">
+            <a href="https://github.com/AleNoia" target="_blank">
+                <button class="btn button-footer mr-3">
+                    <i class="fab fa-github mr-3 fa-lg"></i>
+                    <span>Github</span>
+                </button>
+            </a>
+            <a href="https://www.linkedin.com/in/igor-noia-619a0820b/" target="_blank">
+                <button class="btn button-footer">
+                    <i class="fab fa-linkedin mr-3 fa-lg"></i>
+                    <span>Linkedin</span>
+                </button>
+            </a>
+        </div>
+    </footer>
     <script src="assets/main.js"></script>
 </body>
 
